# omegon-core

./: .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  README.md  cliff.toml  install.sh  release.toml  test-container.sh  test-tui.sh
.argo/: sensor-omegon-core.yaml
.argo/workflows/: pr-validation.yaml  release-build.yaml
.github/workflows/: ci.yml  release.yml  site.yml
.omegon/: profile.json
bridge/: llm-bridge.mjs
crates/omegon/: Cargo.toml
crates/omegon-memory/: Cargo.toml
crates/omegon-memory/src/: backend.rs  decay.rs  hash.rs  inmemory.rs  lib.rs  provider.rs  renderer.rs  sqlite.rs  tests.rs  types.rs  util.rs  vectors.rs
crates/omegon-secrets/: Cargo.toml
crates/omegon-secrets/src/: audit.rs  guards.rs  lib.rs  recipes.rs  redact.rs  resolve.rs  vault.rs
crates/omegon-traits/: Cargo.toml
crates/omegon-traits/src/: lib.rs
crates/omegon/src/: auth.rs  bridge.rs  bus.rs  context.rs  conversation.rs  loop.rs  main.rs  migrate.rs  prompt.rs  providers.rs  session.rs  settings.rs  setup.rs
crates/omegon/src/cleave/: context.rs  coverage.rs  guardrails.rs  mod.rs  orchestrator.rs  plan.rs  progress.rs  state.rs  test_architect.rs  waves.rs  worktree.rs
crates/omegon/src/features/: adapter.rs  auto_compact.rs  cleave.rs  legacy_bridge.rs  lifecycle.rs  manage_tools.rs  mod.rs  model_budget.rs  session_log.rs  terminal_title.rs  version_check.rs
crates/omegon/src/lifecycle/: capture.rs  context.rs  design.rs  mod.rs  spec.rs  types.rs
crates/omegon/src/plugins/: http_feature.rs  manifest.rs  mod.rs
crates/omegon/src/tools/: bash.rs  change.rs  chronos.rs  edit.rs  local_inference.rs  mod.rs  read.rs  render.rs  speculate.rs  validate.rs  view.rs  web_search.rs  whoami.rs  write.rs
crates/omegon/src/tui/: conv_widget.rs  conversation.rs  dashboard.rs  editor.rs  effects.rs  footer.rs  image.rs  mod.rs  segments.rs  selector.rs  spinner.rs  splash.rs  theme.rs  widgets.rs
crates/omegon/src/web/: api.rs  mod.rs  ws.rs
crates/omegon/src/web/assets/: dashboard.html
docs/: README.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  tools.md
examples/plugins/scribe/: plugin.toml
npm/: publish.sh
npm/omegon/: README.md  package.json
npm/platform/: .gitignore
npm/platform/darwin-arm64/: package.json
npm/platform/darwin-x64/: package.json
npm/platform/linux-arm64/: package.json
npm/platform/linux-x64/: package.json
site/: Containerfile  index.html  nginx.conf
