[workspace]
resolver = "2"
members = [
    "crates/omegon",
    "crates/omegon-memory",
    "crates/omegon-traits",
]

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/styrene-lab/omegon-core"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-util = "0.7"
indexmap = { version = "2", features = ["serde"] }
