[package]
name = "omegon-traits"
description = "Shared trait definitions for the Omegon agent loop"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
