[package]
name = "omegon"
description = "Rust-native agent loop and lifecycle engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omegon-agent"
path = "src/main.rs"

[dependencies]
omegon-traits = { path = "../omegon-traits" }
omegon-memory = { path = "../omegon-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
tokio-util = { workspace = true }
indexmap = { workspace = true }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"
