[package]
name = "omegon"
description = "Rust-native agent loop and lifecycle engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omegon"
path = "src/main.rs"

[dependencies]
omegon-traits = { path = "../omegon-traits" }
omegon-memory = { path = "../omegon-memory" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
tokio-util = { workspace = true }
indexmap = { workspace = true }
dirs = "6.0.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio-stream = "0.1.18"
sha2 = "0.10.9"
getrandom = "0.4.2"
open = "5.3.3"
tracing-appender = "0.2.4"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.27.0"
